Rendering while in Weight paint mode doesn't render hair (Cycles) #38576

Closed
opened 2014-02-10 14:15:38 +01:00 by Igor Donevski · 8 comments

System Information
OSX 10.9, ATi 6970

Blender Version
Broken: 2.69 8952f58
Worked: (optional)

Short description of error
Rendering while in Weight paint mode doesn't render hair

Exact steps for others to reproduce the error
Related only to cycles renderer.
Add a particle Hair to an object, enter weight paint mode start a render, the hair doesn't render. Back to object mode, everything is well again.

**System Information** OSX 10.9, ATi 6970 **Blender Version** Broken: 2.69 8952f58 Worked: (optional) **Short description of error** Rendering while in Weight paint mode doesn't render hair **Exact steps for others to reproduce the error** Related only to cycles renderer. Add a particle Hair to an object, enter weight paint mode start a render, the hair doesn't render. Back to object mode, everything is well again.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @el_diablo

Added subscriber: @el_diablo

Added subscriber: @brecht

Added subscriber: @brecht

Fixed, thanks for the report.

Fixed, thanks for the report.

This issue was referenced by blender/blender-addons-contrib@644ca76356

This issue was referenced by blender/blender-addons-contrib@644ca76356223f95d824ecdf13e57b6f2b14650f

This issue was referenced by 644ca76356

This issue was referenced by 644ca76356223f95d824ecdf13e57b6f2b14650f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 644ca76356.

Closed by commit 644ca76356.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38576
No description provided.