Fix T38576: cycles hair not rendering in edit/paint modes.